--- a/src/views/products/newProduct.ejs
+++ b/src/views/products/newProduct.ejs
@@ -3,7 +3,7 @@
   <%- include("../partials/navbar") %>
   <div class="container">
     <h3>Crear Producto</h3>
-    <form id="productForm" action="/api/products" method="POST" class="product-form">
+    <form id="productForm" action="/api/products" method="POST" class="product-form" enctype="multipart/form-data">
       <div class="form-group">
         <label for="title">Título:</label>
         <input type="text" id="title" name="title" required>
@@ -11,6 +11,10 @@
       <div class="form-group">
         <label for="description">Descripción:</label>
         <textarea id="description" name="description" rows="4" required></textarea>
+      </div>
+      <div class="form-group">
+        <label for="thumbnail">Imagen:</label>
+        <input type="file" id="thumbnail" name="thumbnail" accept="image/*">
       </div>
       <div class="form-group">
         <label for="price">Precio:</label>
@@ -38,7 +42,7 @@
       </div>
       <div class="form-group">
         <label for="cellar">Bodega:</label>
-        <input type="text" id="cellar" name="category" required>
+        <input type="text" id="cellar" name="cellar" required>
       </div>
       <div class="form-group">
         <input type="submit" value="Crear Producto">
