--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -4,7 +4,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6">
-        <% if (product?.thumbnail === undefined) { %>
+        <% if (product?.thumbnail !== undefined) { %>
           <img src="<%= product.thumbnail %>" class="product-image" alt="<%= product.title %>">
         <% } else { %>
           <img src="/public/img/botella_vino.webp" class="product-image" alt="<%= product.title %>">
