--- a/src/views/products/productList.ejs
+++ b/src/views/products/productList.ejs
@@ -16,7 +16,7 @@
             <div class="col-md-6 col-lg-3 mb-4">
               <div class="card">
                 <a href="/products/<%= product.id %>">
-                  <% if (product?.thumbnail === undefined) { %>
+                  <% if (product?.thumbnail !== undefined) { %>
                     <img src="<%= product.thumbnail %>" class="card-img-top product-image" alt="<%= product.title %>">
                   <% } else { %>
                     <img src="/public/img/botella_vino.webp" class="card-img-top product-image" alt="<%= product.title %>">
