--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -74,7 +74,7 @@ nav ul li {
   display: inline-block;
   background: #1b1b1b;
   margin: 0 5px;
-  z-index: 99;
+  z-index: 99gi;
 }
 
 nav ul li a {
