--- a/src/views/partials/libs.ejs
+++ b/src/views/partials/libs.ejs
@@ -1,7 +1,7 @@
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 <link rel="stylesheet" href="/public/css/<%- style %>" />
 <link rel="stylesheet" href="/public/css/navbar.css">
 <link rel="stylesheet" href="/public/css/footer.css">
+<script src="https://kit.fontawesome.com/c30a41b3b3.js" crossorigin="anonymous"></script>
 <script src="/socket.io/socket.io.js" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
 <% if (typeof script !== 'undefined') { %>
