Profile page created - user.model updated

--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -5,7 +5,7 @@
     </div>
     <div class="navbar-right">
       <% if (locals.user) { %>
-        <a class="nav-link" href="/api/auth/signout">Sign Out</a>
+        <a class="nav-link" href="/api/auth/signout">Logout</a>
         <a class="nav-link" href="/profile"><i class="fas fa-user"></i></a>
       <% } else { %>
         <a class="nav-link" href="/login">Sign In</a>
