--- a/public/css/error.css
+++ b/public/css/error.css
@@ -24,7 +24,7 @@ body {
   .error-heading {
     font-size: 28px;
     margin-bottom: 10px;
-    color: #8a56ac;
+    color: #ff7f7f;
   }
 
   .error-text {
