--- a/src/views/error.ejs
+++ b/src/views/error.ejs
@@ -5,14 +5,14 @@
     <img class="error-image" src="/public/img/wine-error_img.webp" alt="Error">
     <% console.log(error) %>
     <% if (error) { %>
-      <h3 class="error-heading">Error <%= error.status %></h3>
+      <h3 class="error-heading">Error <%= error.status %>!</h3>
       <p class="error-message"><%= error.message %></p>
     <% } else { %>
       <h3 class="error-heading">Error</h3>
-      <p class="error-text">Ha ocurrido un error.</p>
+      <p class="error-message">Ha ocurrido un error.</p>
     <% } %>
-    <div class="back-to-login">
-      <a href="/products">Volver al menú</a>
+    <div class="back-button-container">
+      <a class="back-button" href="javascript:history.back()">Volver atrás</a>
     </div>
   </div>
   <%- include("./partials/footer") %>
