--- a/public/css/productList.css
+++ b/public/css/productList.css
@@ -80,10 +80,10 @@ h1 {
   justify-content: space-between;
 }
 
-.card:hover {
+/*.card:hover {
   transform: translateY(-5px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+}*/
 
 .product-image {
   object-fit: contain;
