getProducts query supports type & cellar

--- a/src/views/products/productList.ejs
+++ b/src/views/products/productList.ejs
@@ -5,7 +5,7 @@
       <h1>Productos Destacados</h1>
       <div class="search-container">
         <form action="/products" method="GET">
-          <input type="text" name="title" id="search-input" placeholder="Buscar por título">
+          <input type="text" name="title" id="search-input" placeholder="Buscar por título, tipo o bodega">
           <button type="submit" id="search-button">Buscar</button>
         </form>
       </div>
