--- a/public/css/productList.css
+++ b/public/css/productList.css
@@ -2,7 +2,7 @@
 
 body {
   margin: 0;
-  font-family: Arial, sans-serif;
+  font-family: 'Popins', sans-serif;
 }
 
 .container {
@@ -62,8 +62,10 @@ h1 {
 .card-row {
   display: flex;
   flex-wrap: wrap;
+  max-width: calc(75% - 20px);
   justify-content: center;
   margin: 0 -10px;
+  margin: auto;
 }
 
 .card {
@@ -80,10 +82,10 @@ h1 {
   justify-content: space-between;
 }
 
-/*.card:hover {
+.card:hover {
   transform: translateY(-5px);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}*/
+}
 
 .product-image {
   object-fit: contain;
