--- a/src/views/partials/navbar.ejs
+++ b/src/views/partials/navbar.ejs
@@ -25,9 +25,9 @@
       <a class="nav-link" href="/products">Products+</a>
       <input type="checkbox" id="btn1">
       <ul>
-        <li class="nav-item"><a class="nav-link" href="/products">Vino Tinto</a></li>
-        <li class="nav-item"><a class="nav-link" href="/products">Vino Blanco</a></li>
-        <li class="nav-item"><a class="nav-link" href="/products">Vino Rosa</a></li>
+        <li class="nav-item"><a class="nav-link" href="/products?title=tinto">Vino Tinto</a></li>
+        <li class="nav-item"><a class="nav-link" href="/products?title=blanco">Vino Blanco</a></li>
+        <li class="nav-item"><a class="nav-link" href="/products?title=rosa">Vino Rosa</a></li>
       </ul>
     </li>
     <li class="nav-item"><a class="nav-link" href="/products">Sale</a></li>
