--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -2,6 +2,9 @@
 <body>
   <%- include("../partials/navbar") %>
   <div class="container">
+    <div class="back-button-container">
+      <a class="back-button" href="javascript:history.back()">Volver atrás</a>
+    </div>
     <div class="row">
       <div class="col-md-6 image-container">
         <% if (product?.thumbnail !== undefined) { %>
