--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -3,7 +3,21 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-  }
+}
+
+.hide {
+  display: none !important;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.selected {
+  background-color: #8a56ac2d !important;
+}
+
+.selected:hover {
+  border-bottom: 3px solid #8a56ac;
+}
 
 .profile-page {
     display: flex;
@@ -66,11 +80,6 @@
     text-align: left;
 }
 
-.selected {
-    border-bottom: 3px solid #8a56ac;
-    background-color: #8a56ac2d !important;
-}
-
 .profile-options ul li a {
     color: #1b1b1b;
     font-size: 16px;
@@ -78,22 +87,25 @@
     text-decoration: none;
 }
 
-/* Estilos para Profile Details */
 .profile-details {
-    flex-grow: 1;
+  flex-grow: 1;
+  padding: 60px;
+}
+
+/* Estilos para Profile Details */
+.account-details {
     background-color: transparent;
-    padding: 60px;
     box-shadow: none;
   }
   
-  .user-details h3 {
+  .profile-title {
     text-align: center;
     font-size: 24px;
-    color: #333333;
+    color: #1b1b1b;
     margin-bottom: 20px;
   }
   
-  .user-details label {
+  .account-details label {
     display: block;
     margin-bottom: 10px;
     color: #555555;
@@ -101,7 +113,7 @@
     font-size: 14px;
   }
   
-  .user-details input[type="text"] {
+  .account-details input[type="text"] {
     width: 100%;
     padding: 10px;
     border: none;
@@ -112,7 +124,7 @@
     border-bottom: 1px solid #cccccc;
   }
 
-  .user-details input[type="number"] {
+  .account-details input[type="number"] {
     width: auto;
     padding: 10px;
     border: 1px solid #cccccc;
@@ -123,16 +135,16 @@
     border-bottom: 1px solid #cccccc;
 }
   
-  .user-details input[type="text"]:read-only {
+  .account-details input[type="text"]:read-only {
     background-color: transparent;
   }
 
-  .user-details input:focus {
+  .account-details input:focus {
     border-color: #8a56ac;
     outline: none;
 }
   
-  .user-details a {
+  .account-details a {
     background-color: #42b983;
     color: #ffffff;
     border: none;
@@ -148,11 +160,11 @@
     margin-top: 10px;
   }
   
-  .user-details a:hover {
+  .account-details a:hover {
     background-color: #389e74;
   }
   
-  .user-details i {
+  .account-details i {
     margin-right: 8px;
   }
   
@@ -161,27 +173,126 @@
     height: auto;
     border-radius: 50%;
 }
+
+/* Estilos para la lista de usuarios en el panel de administrador */
+.user-list {
+  background-color: #f5f5f5;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-top: 20px;
+}
+
+.user-list-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.user-list h3, .arrow-icon {
+  font-size: 16px;
+  color: #838383;
+  margin-bottom: 15px;
+}
+
+.rotate {
+  transform: rotate(180deg);
+  transition: .3s ease-in
+}
+
+.user-card {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  background-color: #ffffff;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 15px;
+}
+
+.user-card p,
+.user-card select,
+.user-card a {
+  flex: 1;
+  font-size: 12px;
+  color: #555555;
+  margin: 0;
+}
+
+.user-card select {
+  border: 1px solid #cccccc;
+  border-radius: 3px;
+  background-color: #ffffff;
+}
+
+.user-card select:focus {
+  border-color: #8a56ac;
+  outline: none;
+}
+
+.edit-icon, .delete-icon {
+  font-size: 18px;
+  cursor: pointer;
+  margin-left: 5px;
+}
+
+.edit-icon {
+  color: #ffc107;
+}
+
+.edit-icon:hover {
+  color: #ffd000;
+}
+
+.delete-icon {
+  color: #dc3545;
+}
+
+.delete-icon:hover {
+  color: #f0172d;
+}
   
 /* Estilos para pantallas pequeñas (hasta 468px de ancho) */
 @media (max-width: 468px) {
     .profile-page {
-        flex-direction: column; /* Cambia la dirección de flex para pantallas pequeñas */
+        flex-direction: column;
     }
   
     .profile-sidebar {
-        width: 100%; /* Ocupa todo el ancho en pantallas pequeñas */
+        width: 100%;
     }
   
     .profile-details {
         flex-grow: 1;
         background-color: transparent;
-        padding: 30px; /* Ajusta el padding en pantallas pequeñas */
+        padding: 30px;
         box-shadow: none;
     }
   
-    .user-details input[type="text"] {
-        padding: 8px; /* Ajusta el padding en campos de texto en pantallas pequeñas */
+    .account-details input[type="text"] {
+        padding: 8px;
     }
+}
+
+/* Estilos para pantallas pequeñas (hasta 768px de ancho) */
+@media (max-width: 768px) {
+  .user-card {
+    flex-direction: column;
+    text-align: left;
+    padding: 20px;
+  }
+
+  .user-card p,
+  .user-card select,
+  .user-card a {
+    flex: none;
+    width: 100%;
+  }
+
+  .user-card select {
+    width: 50%;
+    margin-right: auto;
+  }
 }
 
 @media (max-width: 950px) {
