--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -15,7 +15,8 @@
   border-radius: 10px;
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 0px 30px 0px 30px
+  margin: 0px 30px 0px 30px;
+  margin-bottom: 10px;
 }
 
 .product-image {
@@ -78,15 +79,6 @@
   background-color: #f0172d;
 }
 
-@media (max-width: 768px) {
-  .product-actions button.updateBtn,
-  .product-actions button.deleteBtn,
-  .checkout-button {
-    padding: 8px 15px;
-    font-size: 14px;
-  }
-}
-
 .product-actions button.updateBtn {
   background-color: #ffc107;
   color: #fff;
@@ -146,6 +138,7 @@
   color: #fff;
   border: none;
   border-radius: 5px;
+  margin-bottom: 30px;
   cursor: pointer;
   transition: background-color 0.3s, color 0.3s;
 }
@@ -153,8 +146,6 @@
 .checkout-button:hover {
   background-color: #45a049;
 }
-
-/* Estilos adicionales */
 
 .empty-cart-message {
   text-align: center;
@@ -181,4 +172,13 @@
 
 .back-button:hover {
   background-color: #333;
+}
+
+@media (max-width: 768px) {
+  .product-actions button.updateBtn,
+  .product-actions button.deleteBtn,
+  .checkout-button {
+    padding: 8px 15px;
+    font-size: 14px;
+  }
 }
