--- a/public/css/productDetail.css
+++ b/public/css/productDetail.css
@@ -33,6 +33,12 @@ body {
   transition: border-bottom 0.6s ease-in-out;
 }
 
+.empty-product-message {
+  text-align: center;
+  color: #777;
+  margin-top: 20px;
+}
+
 .row {
   display: flex;
   flex-wrap: wrap;
