--- a/src/views/products/productList.ejs
+++ b/src/views/products/productList.ejs
@@ -1,22 +1,23 @@
-  <%- include("../partials/head") %>
-  <body>
-    <%- include("../partials/navbar") %>
-    <div class="container">
-      <h1>Productos Destacados</h1>
-      <div class="search-container">
-        <form action="/products" method="GET">
-          <input type="text" name="title" id="search-input" placeholder="Buscar por título, tipo o bodega">
-          <button type="submit" id="search-button">Buscar</button>
-        </form>
-      </div>
+<%- include("../partials/head") %>
+<body>
+  <%- include("../partials/navbar") %>
+  <div class="container">
+    <h1>Productos Destacados</h1>
+    <div class="search-container">
+      <form action="/products" method="GET">
+        <input type="text" name="title" id="search-input" placeholder="Buscar por título, tipo o bodega">
+        <button type="submit" id="search-button">Buscar</button>
+      </form>
+    </div>
 
-      <div class="row card-row">
+    <div class="row card-row">
+      <% if (Array.isArray(products) && products.length > 0) { %>
         <% products.forEach((product) => { %>
-          <% if (product.status === true) { %>
+          <% if (typeof product === 'object' && product.status === true) { %>
             <div class="col-md-6 col-lg-3 mb-4">
               <div class="card">
                 <a href="/products/<%= product.id %>">
-                  <% if (product?.thumbnail !== undefined) { %>
+                  <% if (product.thumbnail) { %>
                     <img src="<%= product.thumbnail %>" class="card-img-top product-image" alt="<%= product.title %>">
                   <% } else { %>
                     <img src="/public/img/botella_vino.webp" class="card-img-top product-image" alt="<%= product.title %>">
@@ -30,20 +31,23 @@
             </div>
           <% } %>
         <% }); %>
-      </div>
-
-      <div class="pagination">
-        <% if (pag) { %>
-          <% if (pag.hasPrevPage) { %>
-            <a href="/products/?page=<%= pag.prevPage %>" class="active">Anterior</a>
-          <% } %>
-          <a href="/products/?page=<%= pag.page %>" class="active"><%= pag.page %></a>
-          <% if (pag.hasNextPage) { %>
-            <a href="/products/?page=<%= pag.nextPage %>" class="active">Siguiente</a>
-          <% } %>
-        <% } %>
-      </div>
+      <% } else { %>
+        <p>No se encontraron productos.</p>
+      <% } %>
     </div>
-    <%- include("../partials/footer") %>
-  </body>
+
+    <div class="pagination">
+      <% if (pag) { %>
+        <% if (pag.hasPrevPage) { %>
+          <a href="/products/?page=<%= pag.prevPage %>" class="active">Anterior</a>
+        <% } %>
+        <a href="/products/?page=<%= pag.page %>" class="active"><%= pag.page %></a>
+        <% if (pag.hasNextPage) { %>
+          <a href="/products/?page=<%= pag.nextPage %>" class="active">Siguiente</a>
+        <% } %>
+      <% } %>
+    </div>
+  </div>
+  <%- include("../partials/footer") %>
+</body>
 </html>
